# cpython4j-poc

./: .gitignore  Notes.md  pom.xml
core/: pom.xml
core/src/main/java-templates/io/roastedroot/cpython4j/core/: WasmResource.java
core/src/main/java-templates/io/roastedroot/quickjs4j/core/: WasmResource.java
core/src/main/java/io/roastedroot/cpython4j/core/: Builtins.java  Engine.java  GuestException.java  GuestFunction.java  HostFunction.java  HostRef.java  Invokables.java
core/src/test/java/io/roastedroot/cpython4j/core/: EngineTest.java
core/src/test/resources/apicurio-numbers/: js-artifact-types-test.js
core/src/test/resources/cowsay/: .gitignore
core/src/test/resources/pyo3-example/: Cargo.toml  build.sh  pyproject.toml
core/src/test/resources/pyo3-example/src/: lib.rs
core/src/test/resources/test-opa/: index.mjs  package-lock.json  package.json
pyo3-plugin/: .gitignore  Cargo.toml  Makefile  build.rs  pyproject.toml
pyo3-plugin/src/: lib.rs
