[package]
name = "pyo3-plugin"
version = "0.1.0"
edition = "2021"

[lib]
name = "pyo3_plugin"
crate-type = ["cdylib"]

[profile.release]
opt-level = "z"
debug = false

[dependencies]
pyo3 = { version = "0.26.0", features = ["generate-import-lib", "abi3-py311"] }
wlr-libpy = { git = "https://github.com/vmware-labs/webassembly-language-runtimes.git", features = [
    "py_main",
] }

[build-dependencies]
wlr-libpy = { git = "https://github.com/vmware-labs/webassembly-language-runtimes.git", features = ["build"] }
